<?xml version="1.0" encoding="utf-8"?>
<com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.viewpods.ProfileViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvClosedTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/txt_closed_tasks" />
        <TextView
            android:id="@+id/tvClosedTaskCount"
            android:layout_marginStart="@dimen/margin_xxlarge"
            android:layout_below="@id/tvClosedTask"
            android:text="@string/txt_closedtask_count"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CustomImageView
            android:id="@+id/ivProfile"
            android:src="@drawable/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            app:cornerRadius="50dp"/>
        <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CustomImageView
            android:id="@+id/ivOnline"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cornerRadius="15dp"
            android:layout_centerHorizontal="true"
            android:layout_alignEnd="@id/ivProfile"
            android:layout_alignBottom="@id/ivProfile"
            android:src="@color/colorGreenLight"/>
        <TextView
            android:id="@+id/tvOpenTasks"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:text="@string/txt_open_tasks"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvOpenTasksCount"
            android:text="@string/txt_opentask_count"
            android:layout_below="@id/tvOpenTasks"
            android:layout_marginEnd="56dp"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl">
        <TextView
            android:id="@+id/tvName"
            android:text="@string/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_regular_3x"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/tvRole"
            android:text="@string/txt_ui_designer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:textSize="@dimen/text_regular_2x"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.viewpods.ProfileViewPod>