<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:showIn="@layout/content_main"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@android:color/white">
        <RelativeLayout
            android:id="@+id/rvCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_large">
            <TextView
                android:id="@+id/tvStatus"
                android:text="@string/txt_in_progress"
                android:textColor="@android:color/holo_red_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tvTaskPart"
                android:text="@string/txt_design"
                android:textColor="@android:color/darker_gray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
            <TextView
                android:id="@+id/tvTaskName"
                android:text="@string/txt_contact_page"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_below="@id/tvStatus"
                android:textSize="@dimen/text_regular_3x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ivComment"
                android:src="@drawable/comment"
                android:layout_below="@id/tvTaskName"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/tvCommentCount"
                android:text="@string/txt_comment_count"
                android:textColor="@android:color/black"
                android:layout_toEndOf="@id/ivComment"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_below="@id/tvTaskName"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/ivFile"
                android:layout_below="@id/tvTaskName"
                android:layout_toEndOf="@id/tvCommentCount"
                android:src="@drawable/ic_attach_file_black_24dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"/>
            <TextView
                android:id="@+id/tvFileCount"
                android:text="@string/txt_file_count"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ivFile"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_below="@id/tvTaskName"/>
            <TextView
                android:id="@+id/tvText"
                android:text="@string/txt_text"
                android:textColor="@android:color/black"
                android:layout_below="@id/tvTaskName"
                android:layout_toStartOf="@id/ivProfile"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CustomImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ivProfile"
                app:cornerRadius="30dp"
                android:layout_below="@id/tvTaskName"
                android:layout_alignParentEnd="true"
                android:src="@drawable/avatar2"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>