<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313144"
    tools:context=".activities.CreateTaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#313144"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivBackToMain"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp"/>
                <TextView
                    android:id="@+id/tvCreateTask"
                    android:textSize="@dimen/text_regular_2x"
                    android:layout_toEndOf="@id/ivBackToMain"
                    android:textColor="@android:color/white"
                    android:text="@string/txt_create_new_task"
                    android:layout_alignBaseline="@id/ivBackToMain"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_alignTop="@id/ivBackToMain"
                    android:layout_alignBottom="@id/ivBackToMain"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvSave"
                    android:text="@string/txt_save"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:textColor="@color/colorGreenLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/ivBackToMain"
                    android:layout_alignTop="@id/ivBackToMain"
                    android:layout_marginTop="@dimen/margin_small"/>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:paddingStart="@dimen/margin_medium_2">
                <TextView
                    android:id="@+id/tvClientName"
                    android:text="@string/txt_client"
                    android:textColor="@android:color/darker_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CustomImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo"
                    app:cornerRadius="30dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_below="@id/tvClientName"
                    />
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:backgroundTint="@android:color/white"
                    android:foregroundTint="@android:color/white"
                    android:layout_toEndOf="@id/ivLogo"/>
                <TextView
                    android:id="@+id/tvProjectName"
                    android:text="@string/txt_project_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ivLogo"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textColor="@android:color/darker_gray"/>
                <EditText
                    android:id="@+id/etProjectName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:foregroundTint="@android:color/white"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/tvProjectName"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:text="@string/txt_project_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/etProjectName"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textColor="@android:color/darker_gray"/>
                <LinearLayout
                    android:id="@+id/ll"
                    android:orientation="horizontal"
                    android:layout_below="@id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:weightSum="15">

                    <Spinner
                        android:id="@+id/spStartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:backgroundTint="@android:color/white"
                        android:foregroundTint="@android:color/white" />
                    <ImageView
                        android:id="@+id/ivDash"
                        android:layout_weight="1"
                        android:src="@drawable/ic_remove_gray_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <Spinner
                        android:id="@+id/spEndDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:backgroundTint="@android:color/white"
                        android:foregroundTint="@android:color/white"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvAssign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_assignee"
                    android:layout_below="@id/ll"
                    android:layout_marginTop="@dimen/margin_large"
                    android:textColor="@android:color/darker_gray"
                    />
               <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvProfile"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvAssign"
                    android:layout_marginTop="@dimen/margin_medium"
                    tools:listitem="@layout/profile_list_items"/>
                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_category"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/rvProfile"
                    android:layout_marginTop="@dimen/margin_large"/>
                <LinearLayout
                    android:id="@+id/llButtons"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_below="@id/tvCategory"
                    android:weightSum="3">
                    <Button
                        android:id="@+id/btnDesign"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_design_lbl"
                        android:textColor="@android:color/white"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:backgroundTint="@color/colorGreenLight"
                        android:background="@color/colorGreenLight"/>

                    <Button
                        android:id="@+id/btnFrontEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_frontend"
                        android:textColor="@android:color/black"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:backgroundTint="@android:color/white"
                        android:background="@android:color/white"/>

                    <Button
                        android:id="@+id/btnBackEnd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_backend"
                        android:textColor="@android:color/black"
                        android:textAllCaps="false"
                        android:layout_weight="1"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginEnd="@dimen/margin_small"
                        android:backgroundTint="@android:color/white"
                        android:background="@android:color/white"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rlDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingTop="@dimen/margin_large"
                android:paddingStart="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:background="@drawable/rounded_left_right_layout">
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_toStartOf="@id/fabFile"
                    android:layout_alignParentStart="true"
                    android:text="@string/txt_description"/>
                <View
                    android:id="@+id/divider"
                    android:layout_width="300dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/fabFile"
                    android:background="@android:color/darker_gray"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_attach_file_green_24dp"
                    android:backgroundTint="@android:color/white"/>
                <TextView
                    android:id="@+id/tvAttachment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_attachments"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/divider"/>
                <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CustomImageView
                    android:id="@+id/ivReference"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:cornerRadius="30dp"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/tvAttachment"
                    android:src="@drawable/logo"/>
                <TextView
                    android:id="@+id/tvReferenceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_reference"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_marginStart="@dimen/margin_medium_2"
                    android:layout_alignTop="@id/ivReference"
                    android:layout_below="@id/tvAttachment"
                    android:layout_toEndOf="@id/ivReference"
                    android:textColor="@android:color/black"/>
                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_size"
                    android:textColor="@android:color/darker_gray"
                    android:layout_below="@id/tvAttachment"
                    android:layout_alignBottom="@id/tvReferenceName"
                    android:layout_alignTop="@id/tvReferenceName"
                    android:layout_toStartOf="@id/fabCancel"
                    android:layout_marginEnd="@dimen/margin_medium_2"
                    />
                <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.StraightProgressBar
                    android:id="@+id/straightProgressBar"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:layout_toEndOf="@id/ivReference"
                    android:layout_toStartOf="@id/fabCancel"
                    app:barColor="@color/colorGreenLight"
                    app:barPercent="80"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_below="@id/tvReferenceName"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabCancel"
                    android:backgroundTint="@color/colorGrayLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/margin_medium_2"
                    android:layout_below="@id/tvAttachment"
                    android:src="@drawable/ic_close_black_24dp"/>
                <Button
                    android:id="@+id/btnCreateTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorGreenLight"
                    android:text="@string/txt_create_task"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/ivReference"
                    android:paddingTop="@dimen/margin_medium_2"
                    android:paddingBottom="@dimen/margin_medium_2"
                    android:layout_marginBottom="@dimen/margin_medium_2"
                    android:layout_marginTop="@dimen/margin_medium"/>
            </RelativeLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>