<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large">
                <LinearLayout
                    android:id="@+id/ll"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="4">

                    <ImageView
                        android:id="@+id/ivBack"
                        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <TextView
                        android:id="@+id/tvTitle"
                        android:text="@string/txt_omp_dashboard"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/text_regular_3x"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingTop="@dimen/margin_medium"
                        android:layout_marginStart="@dimen/margin_medium_2"
                        android:layout_weight="2"/>
                    <Button
                        android:id="@+id/tvProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:paddingStart="@dimen/margin_medium"
                        android:paddingEnd="@dimen/margin_medium"
                        android:paddingTop="@dimen/margin_small"
                        android:paddingBottom="@dimen/margin_small"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:background="@android:color/holo_red_light"
                        android:text="@string/txt_in_progress"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_below="@id/ll"
                    android:textSize="@dimen/text_big"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/txt_create_additional_pages"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvDescription"
                    android:text="@string/txt_date"
                    android:layout_marginTop="@dimen/margin_small"/>
                <RelativeLayout
                    android:id="@+id/ll2"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:orientation="horizontal"
                    android:layout_below="@id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvProfile"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_large"
                        android:layout_toStartOf="@id/idCircularProgressBar"
                        tools:listitem="@layout/profile_list_items"/>
                    <com.padcmyanmar.androidftc.padcx_customviewassignment_nct.views.components.CircularProgressBar
                        android:id="@+id/idCircularProgressBar"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignParentEnd="true"
                        app:percent="85"/>
                </RelativeLayout>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <include layout="@layout/content_main"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>